--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-uglify": "^3.0.0"
   },
   "dependencies": {
+    "inputmask": "^3.3.11",
     "jquery": "^3.2.1",
     "jquery-migrate": "^3.0.1",
     "jquery-ui": "^1.12.1",
