One half of english version

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "normalize.css": "^7.0.0",
     "page-scroll-to-id": "^1.5.8",
     "sass-mediaqueries": "^1.6.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "snapsvg": "^0.5.1"
   }
 }
